--- a/src/style/main.less
+++ b/src/style/main.less
@@ -1,4 +1,5 @@
 @import '../../bower_components/bootstrap/less/bootstrap';
+@import './image-gallery';
 
 .navbar-header .navbar-brand{
     font-size:30px;
@@ -9,6 +10,40 @@
 .dropdown-menu{
     color:black;
 }
+.dropdown-table > tr > th > a {
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: bold;
+  line-height: 1.42857143;
+  color: #333;
+  white-space: nowrap;
+}
+.dropdown-table > tr > td > a {
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: normal;
+  line-height: 1.42857143;
+  color: #333;
+  white-space: nowrap;
+}
+.dropdown-table > tr > td > a:hover,
+.dropdown-table > tr > td > a:focus,
+.dropdown-table > tr > th > a:hover,
+.dropdown-table > tr > th > a:focus {
+  color: #262626;
+  text-decoration: none;
+  background-color: #f5f5f5;
+}
+// Search bar
+.input-group{
+    margin-top:10px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+// body & jumbotron
 body{
     padding-top: 75px;
    /*background-color: #ededed;*/
@@ -22,12 +57,6 @@ body{
 }
 p.longDescription {
     display: none;
-}
-.input-group{
-    margin-top:10px;
-    padding-left: 20px;
-    padding-right: 20px;
-    width: auto;
 }
 .item-for-sale {
     margin: 20px;
@@ -78,14 +107,8 @@ p.longDescription {
     margin: auto;
 }
 // View Product
-.VPholdImg {
-    overflow: hidden;
-}
-.VPholdImg img {
-    width: auto;
-    height: 600px;
-    display: block;
-    margin: auto;
+.ImageBox  {
+    margin-top: 50px;
 }   
 .ViewProduct {
     margin-top: 50px;
