--- a/src/style/main.less
+++ b/src/style/main.less
@@ -1,47 +1,6 @@
 @import '../../bower_components/bootstrap/less/bootstrap';
 @import './image-gallery';
-
-.navbar-header .navbar-brand{
-    font-size:30px;
-    font-family:Garamond;
-    color:#DCDCDC;
-    text-decoration: none;
-}
-.dropdown-menu{
-    color:black;
-}
-.dropdown-table > tr > th > a {
-  display: block;
-  padding: 3px 20px;
-  clear: both;
-  font-weight: bold;
-  line-height: 1.42857143;
-  color: #333;
-  white-space: nowrap;
-}
-.dropdown-table > tr > td > a {
-  display: block;
-  padding: 3px 20px;
-  clear: both;
-  font-weight: normal;
-  line-height: 1.42857143;
-  color: #333;
-  white-space: nowrap;
-}
-.dropdown-table > tr > td > a:hover,
-.dropdown-table > tr > td > a:focus,
-.dropdown-table > tr > th > a:hover,
-.dropdown-table > tr > th > a:focus {
-  color: #262626;
-  text-decoration: none;
-  background-color: #f5f5f5;
-}
-// Search bar
-.input-group{
-    margin-top:10px;
-    padding-left: 20px;
-    padding-right: 20px;
-}
+@import './navbar';
 
 // body & jumbotron
 body{
@@ -49,7 +8,6 @@ body{
    /*background-color: #ededed;*/
 }
 .jumbotron{
-    padding-top:100px;
     background-color:white;
 }
 .container{
