--- a/src/style/navbar.less
+++ b/src/style/navbar.less
@@ -6,6 +6,7 @@
 }
 .dropdown-menu{
     color:black;
+    background-color: #dcdcdc;
 }
 .dropdown-table > tr > th > a {
   display: block;
@@ -42,7 +43,7 @@
   line-height: 1.42857143;
   color: #CECECE;
   white-space: nowrap;
-} 
+}
 
 .dropdown-table > tr > td > a:hover,
 .dropdown-table > tr > td > a:focus,
@@ -56,6 +57,8 @@
     font-weight: bold;
     size: 23px;
     color: #DCDCDC;
+    position: absolute;
+    margin-top: 6px;
 }
 
 // Search bar
@@ -63,4 +66,14 @@
     margin-top:10px;
     padding-left: 20px;
     padding-right: 20px;
+    display: flex;
+}
+.searchBar{
+  border-radius: 3px !important;
+  border-style: none;
+  background-color: #414141;
+  color: #cbcbcb;
+}
+.searchBar:focus{
+  outline: none;
 }
