Major change. Updated to react router 4 and fixed all dependencies!

--- a/src/style/navbar.less
+++ b/src/style/navbar.less
@@ -26,6 +26,12 @@
   color: #333;
   white-space: nowrap;
 }
+@media (min-width: 768px) {
+  .navbar-collapse{
+    margin-left: 10px !important;
+    margin-right: 10px !important;
+  }
+}
 .navbar-collapse.in tr th a {
   display: block;
   padding: 3px 20px;
