--- a/src/style/main.less
+++ b/src/style/main.less
@@ -28,7 +28,10 @@ p.longDescription {
 .btn-primary:hover{
     background-color: #2a2a2a;
 }
-
+.productsRender{
+  position: relative;
+  padding-top: 50px;
+}
 // Add product
 .dropzone {
     height: 250px;
